# xortool-rs

./: Cargo.toml  README.md  first_test.sh  single.sh
.github/: dependabot.yml
.github/workflows/: build.yml  build_and_test.yml  create_release_on_tag.yml  prepare_release.py
src/: args.rs  charset.rs  colors.rs  error.rs  lib.rs  libcolors.rs  routine.rs  tool_main.rs  tool_xor.rs
test/: test.sh
tests/: test_smoke.py
