# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https: //mozilla.org/MPL/2.0/.

[package]
name = "xortool-rs"
description = "A Tool for analyzing multi-byte xor ciphers"
version = "1.0.0"
edition = "2024"
repository = "https://www.github.com/marsfan/xortool-rs"
keywords = ["xor", "xortool", "cryptanalysis"]
categories = [
    "algorithms",
    "command-line-utilities",
    "cryptography",
    "security",
]
readme = "README.md"
license = "MPL-2.0"


[dependencies]
docopt = "1.1.1"
getopt = "1.1.9"
lazy_static = "1.5.0"
unicode_escape = "0.1.0"

[lints.clippy]

all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }


# Rules that we are ok with
# Mostly stuff from "restriction", since that one tends to be very agressive.
blanket_clippy_restriction_lints = "allow"
lint_groups_priority = "allow"
implicit_return = "allow"
print_stdout = "allow"
integer_division_remainder_used = "allow"
integer_division = "allow"
min_ident_chars = "allow"
float_arithmetic = "allow"
arithmetic_side_effects = "allow"
indexing_slicing = "allow"
default_numeric_fallback = "allow"
arbitrary_source_item_ordering = "allow"
single_call_fn = "allow"
question_mark_used = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
exhaustive_enums = "allow"
bool_assert_comparison = "allow"
redundant_test_prefix = "allow"
print_stderr = "allow"

# Rules we might want to enable later
missing_inline_in_public_items = "allow"
must_use_candidate = "allow"
unwrap_used = "allow"
pattern_type_mismatch = "allow"


# Individual rules instead of groups
# missing_docs_in_private_items = "warn"
# cargo_common_metadata = "warn"
# unwrap_in_result = "warn"
# match_bool = "warn"
# uninlined_format_args = "warn"
# needless_pass_by_value = "warn"
# explicit_iter_loop = "warn"

# must_use_candidate = { level = "allow", priority = -1 }

# Allow multiple crate versions issue
# caused by dependencies
# multiple_crate_versions = { level = "allow", priority = 1 }
