# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https: //mozilla.org/MPL/2.0/.

[package]
name = "xortool-rs"
description = "A Tool for analyzing multi-byte xor ciphers"
version = "1.0.2"
edition = "2024"
repository = "https://www.github.com/marsfan/xortool-rs"
keywords = ["xor", "xortool", "cryptanalysis"]
categories = [
    "algorithms",
    "command-line-utilities",
    "cryptography",
    "security",
]
readme = "README.md"
license = "MPL-2.0"


[dependencies]
docopt = "1.1.1"
getopt = "1.1.9"
unicode_escape = "0.1.0"

[lints.clippy]

all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }


# Rules that we are ok with
# Mostly stuff from "restriction", since that one tends to be very agressive.
blanket_clippy_restriction_lints = "allow"
lint_groups_priority = "allow"
implicit_return = "allow"
print_stdout = "allow"
integer_division_remainder_used = "allow"
integer_division = "allow"
min_ident_chars = "allow"
float_arithmetic = "allow"
arithmetic_side_effects = "allow"
indexing_slicing = "allow"
default_numeric_fallback = "allow"
arbitrary_source_item_ordering = "allow"
single_call_fn = "allow"
question_mark_used = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
exhaustive_enums = "allow"
bool_assert_comparison = "allow"
redundant_test_prefix = "allow"
print_stderr = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"

# Rules we might want to enable later
missing_inline_in_public_items = "allow"
must_use_candidate = "allow"
unwrap_used = "allow"
pattern_type_mismatch = "allow"
exit = "allow"
unwrap_in_result = "allow"
create_dir = "allow"
missing_trait_methods = "allow"
iter_over_hash_type = "allow"

similar_names = "allow"
shadow_reuse = "allow"
